fix: checkout items spacing and image size

--- a/src/app/(pages)/checkout/CheckoutItem/index.module.scss
+++ b/src/app/(pages)/checkout/CheckoutItem/index.module.scss
@@ -13,8 +13,15 @@
 .media {
     width: 64px;
     height: 64px;
-    object-fit: cover;
+    padding: 4px;
     background-color: var(--color-base-150);
+}
+
+.image {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+
 }
 
 .elements {
