--- a/src/app/(pages)/checkout/CheckoutPage/index.module.scss
+++ b/src/app/(pages)/checkout/CheckoutPage/index.module.scss
@@ -2,6 +2,9 @@
 
 .items {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
   margin-bottom: var(--base);
 }
 
@@ -72,8 +75,13 @@
 }
 
 .orderTotal {
+  display: flex;
+  justify-content: space-between;
   margin-top: var(--base);
   font-weight: 600;
+  width: 100%;
+  background-color: var(--color-base-100);
+  padding: 20px;
 }
 
 .loading,
